--- a/pre.ipynb
+++ b/pre.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,18 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load the dataset\n",
-    "file_path = 'Combined_Dataset.csv'\n",
+    "file_path = 'CSV/Combined_Dataset.csv'\n",
     "df = pd.read_csv(file_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
        "[2 rows x 47 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +494,7 @@
        "[5 rows x 45 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,10 +505,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.preprocessing import LabelEncoder\n",
     "# Initialize LabelEncoder\n",
     "le = LabelEncoder()\n",
     "\n",
@@ -519,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1061,7 +1062,7 @@
        "[288 rows x 45 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1072,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1086,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1628,7 +1629,7 @@
        "[288 rows x 45 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1640,7 +1641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1654,7 +1655,7 @@
    "source": [
     "\n",
     "# Save the scaled DataFrame to a CSV file\n",
-    "df_scaled.to_csv('StudentFeedback', index=False)\n",
+    "df_scaled.to_csv('StudentFeedback_final.csv', index=False)\n",
     "\n",
     "# Display a message confirming the save\n",
     "print(\"Scaled DataFrame saved to 'scaled_data.csv'\")"
