--- a/data_preprocessing/preprocessing.ipynb
+++ b/data_preprocessing/preprocessing.ipynb
@@ -5323,7 +5323,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -5337,7 +5337,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
